--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of entsoeapi is to ...
+The goal of entsoeapi is to create an easy wrapper for the ENTSO-E api.
 
 ## Installation
 
@@ -46,7 +46,7 @@ GITHUB_PAT = "<your_security_token>"
 
 ## Example
 
-You use the eic codes to get the data. Let's try to find the eic codes for Germany.
+You use the eic codes to get the data. Let's try to find the eic code for Germany.
 
 ```{r example, warning=FALSE, message=FALSE}
 library(tidyverse)
